docs/v5.8.0/_sources/examples.rst.txt
.. _examples_gallery:

Coding examples
===============

Explore our gallery of examples demonstrating the usage of PyMieSim. These examples range
from general API usage to specific applications, presented in a tutorial format to guide
users through practical implementations.

.. toctree::
   :hidden:
   :maxdepth: 2

   /gallery/single/index
   /gallery/experiment/index
   /gallery/benchmarks/index
   /gallery/extras/index
   /gallery/validation/index

.. grid:: 5
   :gutter: 2

   .. grid-item-card:: Single
      :link: /gallery/single/index
      :link-type: doc
      :text-align: center

      Core API usage and simple, focused examples.

      +++

      .. button-link:: /gallery/single/index
         :color: primary
         :outline:
         :expand:

         Open

   .. grid-item-card:: Experiment
      :link: /gallery/experiment/index
      :link-type: doc
      :text-align: center

      End to end tutorials with realistic workflows.

      +++

      .. button-link:: /gallery/experiment/index
         :color: primary
         :outline:
         :expand:

         Open

   .. grid-item-card:: Extras
      :link: /gallery/extras/index
      :link-type: doc
      :text-align: center

      Advanced tips, utilities, and special topics.

      +++

      .. button-link:: /gallery/extras/index
         :color: primary
         :outline:
         :expand:

         Open

   .. grid-item-card:: Validation
      :link: /gallery/validation/index
      :link-type: doc
      :text-align: center

      Reference comparisons and internal consistency checks.

      +++

      .. button-link:: /gallery/validation/index
         :color: primary
         :outline:
         :expand:

         Open

   .. grid-item-card:: Benchmarks
      :link: /gallery/benchmarks/index
      :link-type: doc
      :text-align: center

      Reproducible runtime and scaling measurements.

      +++

      .. button-link:: /gallery/benchmarks/index
         :color: primary
         :outline:
         :expand:

         Open
